--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 <div class="containerAbout">       
 
     
-        <header><!--Here's where the masthead starts.  This is the same across all pages.-->
+        <header class="aboutme"><!--Here's where the masthead starts.  This is the same across all pages.-->
           <h1 class="headtext1"><a href="corbinblanchard-portfolio.html" class="nostyle">Corbin Blanchard</a></h1>
           <h3 class="headtext2">Student Graphic Designer</h3>
-          <!--Button on masthead that leads to my résumé-->
           <div class="masthead-buttons">
-            <a href="https://drive.google.com/file/d/0B48pOORoRsKpQzBTQXFGa1RWajQ/view" target="_blank" class="masthead-button-2" data-context="page.masthead">Résumé PDF</a>
+            <a href="corbinBlanchard-Portfolio.html" class="masthead-button-2"><svg class="homeicon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>Home</a>
+          </div>
+          <div class="masthead-buttons2">
+            <a href="https://drive.google.com/file/d/0B48pOORoRsKpQzBTQXFGa1RWajQ/view" target="_blank" class="masthead-button-2">Résumé PDF</a>
+          </div>
+          <div class="masthead-buttons3">
+            <a href="https://drive.google.com/file/d/0B48pOORoRsKpQzBTQXFGa1RWajQ/view" target="_blank" class="masthead-button-2">Contact</a>
           </div>
 
         </header><!--This is the end of the masthead.-->
@@ -42,12 +47,14 @@
             <img class="myImg" src="930b4498-e935-488d-a480-367bcbb8cc73_rw_1200.jpg">
             <img class="myImg" src="a838ebfc-5352-4203-bd6a-7898781fa8a6_rw_1200.jpg">
             <img class="myImg" src="01e66414-0572-4760-ae31-9e6c8e013222_rw_1200.png">
+            <!--Start Modal for Img Grid 1-->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
             <div id="myModal" class="modal">
               <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
               <img class="modal-content" id="img01">
             </div>
             <script src="corbinBlanchard-Portfolio.js"></script>
+            <!--End Modal for Img Grid 1-->
         </div><!--End first img grid-->
 
 
@@ -66,12 +73,14 @@
               <img class="myImg" src="8f3d73e7-b343-4d5e-a08b-a46231169acb_rw_1200.jpg">
               <img class="myImg" src="c950cfe1-6dc4-4826-a6fc-f6d4b727f21d_rw_1200.jpg">
               <img class="myImg" src="92617472-fa56-4b7f-be01-8ad75499d29b_rw_1200.jpg">
+              <!--Start Modal for Img Grid 1-->
               <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
                 <div id="myModal" class="modal">
                 <span class="close" onclick="document.getElementById('myModal').style.display='none'">&times;</span>
                 <img class="modal-content" id="img01">
                 </div>
-            <script src="corbinBlanchard-Portfolio.js"></script>
+              <script src="corbinBlanchard-Portfolio.js"></script>
+              <!--End Modal for Img Grid 1-->
           </div><!-- end second img grid -->
 
           
