One last link hotfix

--- a/corbinBlanchard-Portfolio.html
+++ b/corbinBlanchard-Portfolio.html
@@ -12,7 +12,7 @@
 
     
         <header class="aboutme"><!--Here's where the masthead starts.  This is the same across all pages.-->
-          <h1 class="headtext1"><a href="index.html" class="nostyle">Corbin Blanchard</a></h1>
+          <h1 class="headtext1">Corbin Blanchard</h1>
           <h3 class="headtext2">Student Graphic Designer</h3>
           <div class="masthead-buttons">
             <a href="index.html" class="masthead-button-2"><svg class="homeicon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>Home</a>
