--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="containerport"><!--Begin container of portfolio page-->
   <header class="home"><!--Here's where the masthead starts.  This is the same across all pages.-->
-    <h1 class="headtext1"><a href="corbinblanchard-portfolio.html" class="nostyle">Corbin Blanchard</a></h1>
+    <h1 class="headtext1">Corbin Blanchard</h1>
     <h3 class="headtext2">Student Graphic Designer</h3>
     <!--Button on masthead that leads to my résumé-->
     <div class="masthead-buttons">
