--- a/corbinBlanchard-Portfolio.html
+++ b/corbinBlanchard-Portfolio.html
@@ -18,7 +18,7 @@
             <a href="index.html" class="masthead-button-2"><svg class="homeicon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>Home</a>
           </div>
           <div class="masthead-buttons2">
-            <a href="CorbinBlanchard-Resume-Rev2.html" target="_blank" class="masthead-button-2">Résumé PDF</a>
+            <a href="CorbinBlanchard-Resume-Rev2.html" target="_blank" class="masthead-button-2">Résumé</a>
           </div>
 
 
